--- a/style.scss
+++ b/style.scss
@@ -27,10 +27,37 @@ body {
     box-shadow: 0 5vmin 8vmin rgba(0,0,0,.3);
     padding: 1em;
     border-radius: 0.5em;
+
+    display: grid;
+    > [data-view] {
+        grid-area: 1/1;
+    }
 }
 
 [data-view] {
     &:not([data-active]) {
         visibility: hidden;
+    }
+}
+
+&:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+[data-state = 'overview'][data-prev-state='details'] {
+    [data-view = 'overview'] {
+        &:after {
+            background-color: red($color: #000000);
+        }
+    }
+
+    [data-view = 'details'] {
+        transform: scale(0.8);
     }
 }
